networks-policy.yaml
---
# NetworkPolicy for appns-b
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-appns-b-to-appns-a
  namespace: appns-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            name: appns-a

---
# NetworkPolicy for appns-a
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-appns-a-to-appns-b
  namespace: appns-a
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            name: appns-b
---
